implementing user module tests

--- a/packages/server/src/modules/users/views/forgot_password.hbs
+++ b/packages/server/src/modules/users/views/forgot_password.hbs
@@ -15,5 +15,5 @@
     <a href="{{link}}">Resetar senha</a>
   </p>
   <p>Se não foi você, então descarte esse email!</p>
-  <strong>Equipe GoBarber</strong>
+  <strong>Equipe TCC Theme Ideas</strong>
 </div>
